# cached_classproperty

./: Makefile  README.md  pyproject.toml
cached_classproperty/: __init__.py
tests/: test_classproperty.py
